[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Attack/SpellCaster.gd" type="Script" id=1]

[node name="SpellCaster" type="Node2D"]
script = ExtResource( 1 )

[node name="CastTime" type="Timer" parent="."]

[node name="ChargeTime" type="Timer" parent="."]

[connection signal="timeout" from="CastTime" to="." method="_on_CastTime_timeout"]
[connection signal="timeout" from="ChargeTime" to="." method="_on_ChargeTime_timeout"]
